Fixed overflow in Windows chrome

--- a/elements/cg-graph.css
+++ b/elements/cg-graph.css
@@ -1,5 +1,6 @@
 :host {
     position: absolute;
+    overflow: hidden;
     width: 100%;
     height: 100%;
 }
